issue #135 - fonts alignment

--- a/common/style-coupling/src/vvd-style-coupling.scss
+++ b/common/style-coupling/src/vvd-style-coupling.scss
@@ -29,4 +29,5 @@
 	--mdc-theme-surface: var(--vvd-color-surface-background);
 	--mdc-theme-on-surface: var(--vvd-color-surface-foreground);
 	--mdc-theme-error: var(--vvd-color-error);
+	--mdc-typography-font-family: var(--vvd-font-family-spezia);
 }
